# spark

./: .gitignore  Cargo.toml  config.yml
spark-core/: Cargo.toml
spark-core/src/: config.rs  history.rs  http.rs  lib.rs  saved.rs
spark-tui/: Cargo.toml
spark-tui/src/: app.rs  input.rs  main.rs  ui.rs
