[package]
name = "spark-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"

[lints.clippy]
pedantic = "warn"
missing_docs_in_private_items = "deny"
